--- a/peers.yml
+++ b/peers.yml
@@ -1,11 +1,18 @@
 AS1000:
   description: Asrael
-  bgp_ipv4: 10.200.0.1/24
-  bgp_ipv6: fec0::1eed:beef/64
+  vpn:
+    public:
+      v4: 127.0.0.1
+      v6: ::1
+    transfer:
+      v4: 10.200.0.1/24
+      v6: fec0::1eed:beef/64
 
 AS42069:
   description: delta_vex
-  bgp_ipv4: 10.200.0.42/24
-  bgp_ipv6: fec0::dc42/64
-  routes:
-    - fddc::/16
+  vpn:
+    public:
+      v6: 2a01:584:4:0:182d:ccff:febd:a5fd
+    transfer:
+      v4: 10.200.0.42/24
+      v6: fec0::dc42/64
